# go-yara

./: BUILD.bazel  WORKSPACE.bazel  compiler.go  error.go  example_mem_blocks_test.go  go.mod  go.sum  main.go  main_yara38.go  main_yara38_test.go  mem_blocks.go  mem_blocks_test.go  rule.go  rule_yara35.go  rules.go  rules_callback.go  rules_test.go  rules_yara34.go  scanner.go  scanner_profiling_test.go  scanner_test.go  stream.go
_examples/simple-yara/: simple-yara.go
