load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cbpool.go",
        "cgo.go",
        "compiler.go",
        "error.go",
        "main.go",
        "object.go",
        "rule.go",
        "rules.go",
        "rules_callback.go",
        "scanner.go",
        "stream.go",
        "util.go",
        "mem_blocks.go",
    ],
    cdeps = [
        "@com_github_virustotal_yara//:libyara",
    ],
    cgo = True,
    importpath = "github.com/VirusTotal/go-yara",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cbpool_test.go",
        "compiler_test.go",
        "main_test.go",
        "ported_test.go",
        "rules_test.go",
        "scanner_test.go",
        "stress_test.go",
        "mem_blocks_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
