load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# Golang-related rules.
http_archive(
    name = "io_bazel_rules_go",
    sha256 = "69de5c704a05ff37862f7e0f5534d4f479418afc21806c887db544a316f3cb6b",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.27.0/rules_go-v0.27.0.tar.gz",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.27.0/rules_go-v0.27.0.tar.gz",
    ],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
go_rules_dependencies()
go_register_toolchains(version = "1.15.5")

git_repository(
    name = "com_github_virustotal_yara",
    remote = "https://github.com/VirusTotal/yara",
    commit = "ae503e9671b274802cb07dc032b5e5cea28773bd",
    shallow_since = "1632072075 +0200"
)

load("@com_github_virustotal_yara//:bazel/yara_deps.bzl", "yara_deps")
yara_deps()
